[package]
name = "databaseql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", default-features = false, features = ["macros"] }
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
dotenvy = "0.15.7"
env_logger = "0.11.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "any", ] }
